Bug 137116 - FILEOPEN XLSX Pie chart datalabels placed inside pie slices with Best fit alignment
Summary: FILEOPEN XLSX Pie chart datalabels placed inside pie slices with Best fit ali...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.1.0
Keywords: bibisectRequest, regression
Depends on:
Blocks: OOXML-Chart Pie-and-Donut
  Show dependency treegraph
 
Reported: 2020-09-29 08:09 UTC by NISZ LibreOffice Team
Modified: 2024-10-15 21:29 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel (14.09 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-09-29 08:09 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Excel and Calc (120.22 KB, image/png)
2020-09-29 08:10 UTC, NISZ LibreOffice Team
Details
Screenshot of the file in Calc before the regression (66.27 KB, image/png)
2020-09-29 08:10 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-09-29 08:09:43 UTC
Created attachment 165938 [details]
Example file from Excel

This is a followup to bug #136752
Since then the attached xlsx file has some data labels placed inside the pie chart while in Excel 2016 and before the patch to that bug they were placed outside the pie chart slices.

Steps to reproduce:
    1. Open attached file

Actual results:
4 data labels are inside the pie slices.

Expected results:
No data labels inside the pie slices.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 1d820e8e9808a3204134f84945fab27f4aa784de
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-09-29 08:10:08 UTC
Created attachment 165939 [details]
Screenshot of the original document side by side in Excel and Calc
Comment 2 NISZ LibreOffice Team 2020-09-29 08:10:32 UTC
Created attachment 165940 [details]
Screenshot of the file in Calc before the regression
Comment 3 Commit Notification 2020-10-02 15:02:20 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a91ac466e2a996a07248ec4a2518d5ba9bdf3d61

tdf#137116 pie chart: improve BestFit position of data labels

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.