tdf#137116 pie chart: improve BestFit position of data labels

Regression from commit: 2e1a1054a4a98415057e72269ace9db075d3b191
(tdf#136752 pie chart: improve data label position)

Change-Id: I66943684957a220c81db7f928fbb47700b78d012
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/103610
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>